--- a/intrepid-tile-puzzle/TPPuzzleViewController.xib
+++ b/intrepid-tile-puzzle/TPPuzzleViewController.xib
@@ -4,7 +4,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TPViewController">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TPPuzzleViewController">
             <connections>
                 <outlet property="emptyTile" destination="0Ne-do-BeQ" id="dSB-Ii-Tte"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -134,11 +134,33 @@
                         <constraint firstAttribute="width" constant="300" id="qdr-re-dPb"/>
                     </constraints>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e2y-dC-aLJ">
+                    <rect key="frame" x="256" y="530" width="89" height="30"/>
+                    <state key="normal" title="Reset Puzzle">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="resetTapped:" destination="-1" eventType="touchUpInside" id="YAq-Xo-wkm"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hDV-8f-5fR">
+                    <rect key="frame" x="252" y="492" width="97" height="30"/>
+                    <state key="normal" title="Shuffle Puzzle">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="shuffleTapped:" destination="-1" eventType="touchUpInside" id="WWd-8M-f6D"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="e2y-dC-aLJ" firstAttribute="top" secondItem="hDV-8f-5fR" secondAttribute="bottom" constant="8" id="5vO-M0-GJ1"/>
                 <constraint firstAttribute="centerX" secondItem="Cd8-gD-rPd" secondAttribute="centerX" id="Ibo-sK-J5C"/>
+                <constraint firstAttribute="centerX" secondItem="e2y-dC-aLJ" secondAttribute="centerX" id="TTZ-MY-atI"/>
                 <constraint firstAttribute="centerY" secondItem="Cd8-gD-rPd" secondAttribute="centerY" id="bgb-vV-HhM"/>
+                <constraint firstAttribute="centerX" secondItem="hDV-8f-5fR" secondAttribute="centerX" id="gl2-9y-vrN"/>
+                <constraint firstAttribute="bottom" secondItem="e2y-dC-aLJ" secondAttribute="bottom" constant="40" id="iq5-m5-eXx"/>
             </constraints>
         </view>
     </objects>
