--- a/intrepid-tile-puzzle/TPMainViewController.xib
+++ b/intrepid-tile-puzzle/TPMainViewController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D2134" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TPMainViewController">
@@ -13,7 +13,44 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GVe-4A-yAH">
+                    <rect key="frame" x="285" y="235" width="30" height="30"/>
+                    <state key="normal" title="3x3">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="tappedPuzzleSize:" destination="-1" eventType="touchUpInside" id="BHu-6D-B6K"/>
+                    </connections>
+                </button>
+                <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jwc-3g-stV">
+                    <rect key="frame" x="285" y="302" width="30" height="30"/>
+                    <state key="normal" title="4x4">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="tappedPuzzleSize:" destination="-1" eventType="touchUpInside" id="9OG-2N-jMx"/>
+                    </connections>
+                </button>
+                <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IAP-ES-jHY">
+                    <rect key="frame" x="285" y="363" width="30" height="30"/>
+                    <state key="normal" title="5x5">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="tappedPuzzleSize:" destination="-1" eventType="touchUpInside" id="sgX-Zs-b0R"/>
+                    </connections>
+                </button>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="centerX" secondItem="Jwc-3g-stV" secondAttribute="centerX" id="8Sw-K4-8cp"/>
+                <constraint firstAttribute="centerX" secondItem="GVe-4A-yAH" secondAttribute="centerX" id="CrW-u4-Myw"/>
+                <constraint firstItem="Jwc-3g-stV" firstAttribute="top" secondItem="GVe-4A-yAH" secondAttribute="bottom" constant="37" id="UX1-py-xHC"/>
+                <constraint firstItem="IAP-ES-jHY" firstAttribute="top" secondItem="Jwc-3g-stV" secondAttribute="bottom" constant="31" id="WeF-Ha-LFM"/>
+                <constraint firstAttribute="centerX" secondItem="IAP-ES-jHY" secondAttribute="centerX" id="wNT-bd-Y9e"/>
+                <constraint firstItem="GVe-4A-yAH" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="235" id="xQj-X2-hay"/>
+            </constraints>
         </view>
     </objects>
 </document>
