--- a/intrepid-tile-puzzle/TPMainViewController.xib
+++ b/intrepid-tile-puzzle/TPMainViewController.xib
@@ -6,6 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TPMainViewController">
             <connections>
+                <outlet property="imagesCollectionView" destination="yUz-ce-9h9" id="It8-vY-fZE"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -15,10 +16,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GVe-4A-yAH">
-                    <rect key="frame" x="270" y="235" width="61" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="61" id="E7Q-2P-QfA"/>
-                    </constraints>
+                    <rect key="frame" x="159" y="550" width="33" height="30"/>
                     <state key="normal" title="Easy">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -26,23 +24,8 @@
                         <action selector="tappedPuzzleSize:" destination="-1" eventType="touchUpInside" id="BHu-6D-B6K"/>
                     </connections>
                 </button>
-                <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jwc-3g-stV">
-                    <rect key="frame" x="267" y="297" width="66" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="66" id="Oz3-dI-aH3"/>
-                    </constraints>
-                    <state key="normal" title="Medium">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="tappedPuzzleSize:" destination="-1" eventType="touchUpInside" id="9OG-2N-jMx"/>
-                    </connections>
-                </button>
                 <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IAP-ES-jHY">
-                    <rect key="frame" x="278" y="363" width="45" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="45" id="4wI-Rd-dau"/>
-                    </constraints>
+                    <rect key="frame" x="408" y="550" width="34" height="30"/>
                     <state key="normal" title="Hard">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -50,15 +33,43 @@
                         <action selector="tappedPuzzleSize:" destination="-1" eventType="touchUpInside" id="sgX-Zs-b0R"/>
                     </connections>
                 </button>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="yUz-ce-9h9">
+                    <rect key="frame" x="150" y="99" width="300" height="304"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="300" id="653-gm-NjO"/>
+                        <constraint firstAttribute="height" constant="304" id="y0N-es-UNR"/>
+                    </constraints>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="2" minimumInteritemSpacing="2" id="tTD-he-gSE">
+                        <size key="itemSize" width="100" height="100"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="vKu-yJ-0LW"/>
+                        <outlet property="delegate" destination="-1" id="xcn-3U-PyR"/>
+                    </connections>
+                </collectionView>
+                <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jwc-3g-stV">
+                    <rect key="frame" x="272" y="550" width="56" height="30"/>
+                    <state key="normal" title="Medium">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="tappedPuzzleSize:" destination="-1" eventType="touchUpInside" id="9OG-2N-jMx"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="GVe-4A-yAH" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="235" id="1x1-rs-8Sp"/>
-                <constraint firstItem="Jwc-3g-stV" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="9Xj-eq-ftT"/>
-                <constraint firstItem="GVe-4A-yAH" firstAttribute="centerX" secondItem="Jwc-3g-stV" secondAttribute="centerX" id="Ebk-01-WGp"/>
-                <constraint firstItem="IAP-ES-jHY" firstAttribute="top" secondItem="Jwc-3g-stV" secondAttribute="bottom" constant="36" id="Q59-9u-he0"/>
-                <constraint firstItem="IAP-ES-jHY" firstAttribute="centerX" secondItem="Jwc-3g-stV" secondAttribute="centerX" id="ebY-dV-ytg"/>
-                <constraint firstItem="Jwc-3g-stV" firstAttribute="top" secondItem="GVe-4A-yAH" secondAttribute="bottom" constant="32" id="kJ5-bo-fwL"/>
+                <constraint firstAttribute="centerX" secondItem="Jwc-3g-stV" secondAttribute="centerX" id="2D6-3b-DU9"/>
+                <constraint firstItem="Jwc-3g-stV" firstAttribute="leading" secondItem="GVe-4A-yAH" secondAttribute="trailing" constant="80" id="CAq-th-7W5"/>
+                <constraint firstItem="IAP-ES-jHY" firstAttribute="leading" secondItem="Jwc-3g-stV" secondAttribute="trailing" constant="80" id="ItQ-fb-3PZ"/>
+                <constraint firstAttribute="bottom" secondItem="IAP-ES-jHY" secondAttribute="bottom" constant="20" id="RYT-x5-7Ig"/>
+                <constraint firstAttribute="bottom" secondItem="Jwc-3g-stV" secondAttribute="bottom" constant="20" id="fGL-Hk-vCZ"/>
+                <constraint firstAttribute="bottom" secondItem="GVe-4A-yAH" secondAttribute="bottom" constant="20" id="m26-Ie-Gqu"/>
+                <constraint firstAttribute="centerY" secondItem="yUz-ce-9h9" secondAttribute="centerY" constant="49" id="nMi-RJ-4nZ"/>
+                <constraint firstAttribute="centerX" secondItem="yUz-ce-9h9" secondAttribute="centerX" id="non-Rf-pHf"/>
             </constraints>
         </view>
     </objects>
