--- a/intrepid-tile-puzzle/TPMainViewController.xib
+++ b/intrepid-tile-puzzle/TPMainViewController.xib
@@ -24,6 +24,15 @@
                         <action selector="tappedPuzzleSize:" destination="-1" eventType="touchUpInside" id="BHu-6D-B6K"/>
                     </connections>
                 </button>
+                <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jwc-3g-stV">
+                    <rect key="frame" x="272" y="550" width="56" height="30"/>
+                    <state key="normal" title="Medium">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="tappedPuzzleSize:" destination="-1" eventType="touchUpInside" id="9OG-2N-jMx"/>
+                    </connections>
+                </button>
                 <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IAP-ES-jHY">
                     <rect key="frame" x="408" y="550" width="34" height="30"/>
                     <state key="normal" title="Hard">
@@ -34,13 +43,13 @@
                     </connections>
                 </button>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="yUz-ce-9h9">
-                    <rect key="frame" x="150" y="99" width="300" height="304"/>
+                    <rect key="frame" x="148" y="51" width="304" height="456"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="300" id="653-gm-NjO"/>
-                        <constraint firstAttribute="height" constant="304" id="y0N-es-UNR"/>
+                        <constraint firstAttribute="width" constant="304" id="653-gm-NjO"/>
+                        <constraint firstAttribute="height" constant="456" id="y0N-es-UNR"/>
                     </constraints>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="2" minimumInteritemSpacing="2" id="tTD-he-gSE">
-                        <size key="itemSize" width="100" height="100"/>
+                        <size key="itemSize" width="150" height="150"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -50,25 +59,32 @@
                         <outlet property="delegate" destination="-1" id="xcn-3U-PyR"/>
                     </connections>
                 </collectionView>
-                <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jwc-3g-stV">
-                    <rect key="frame" x="272" y="550" width="56" height="30"/>
-                    <state key="normal" title="Medium">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="tappedPuzzleSize:" destination="-1" eventType="touchUpInside" id="9OG-2N-jMx"/>
-                    </connections>
-                </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose Image" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WgT-is-WyB">
+                    <rect key="frame" x="254" y="19" width="94" height="17"/>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose Difficulty" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="joh-TL-QZj">
+                    <rect key="frame" x="245" y="523" width="110" height="17"/>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="centerX" secondItem="Jwc-3g-stV" secondAttribute="centerX" id="2D6-3b-DU9"/>
                 <constraint firstItem="Jwc-3g-stV" firstAttribute="leading" secondItem="GVe-4A-yAH" secondAttribute="trailing" constant="80" id="CAq-th-7W5"/>
+                <constraint firstItem="Jwc-3g-stV" firstAttribute="top" secondItem="joh-TL-QZj" secondAttribute="bottom" constant="10" id="D1U-4e-DVa"/>
                 <constraint firstItem="IAP-ES-jHY" firstAttribute="leading" secondItem="Jwc-3g-stV" secondAttribute="trailing" constant="80" id="ItQ-fb-3PZ"/>
+                <constraint firstItem="yUz-ce-9h9" firstAttribute="top" secondItem="WgT-is-WyB" secondAttribute="bottom" constant="15" id="N8g-Aw-6ni"/>
+                <constraint firstItem="joh-TL-QZj" firstAttribute="top" secondItem="yUz-ce-9h9" secondAttribute="bottom" constant="16" id="PAz-Kf-wzZ"/>
+                <constraint firstAttribute="centerX" secondItem="joh-TL-QZj" secondAttribute="centerX" id="QeR-cy-YHp"/>
                 <constraint firstAttribute="bottom" secondItem="IAP-ES-jHY" secondAttribute="bottom" constant="20" id="RYT-x5-7Ig"/>
                 <constraint firstAttribute="bottom" secondItem="Jwc-3g-stV" secondAttribute="bottom" constant="20" id="fGL-Hk-vCZ"/>
+                <constraint firstAttribute="centerX" secondItem="WgT-is-WyB" secondAttribute="centerX" id="gV1-g7-oyU"/>
                 <constraint firstAttribute="bottom" secondItem="GVe-4A-yAH" secondAttribute="bottom" constant="20" id="m26-Ie-Gqu"/>
-                <constraint firstAttribute="centerY" secondItem="yUz-ce-9h9" secondAttribute="centerY" constant="49" id="nMi-RJ-4nZ"/>
                 <constraint firstAttribute="centerX" secondItem="yUz-ce-9h9" secondAttribute="centerX" id="non-Rf-pHf"/>
             </constraints>
         </view>
